<resources>
    <string name="config_mms_user_agent_profile_url">http://www.google.com/oha/rdf/ua-profile-kila.xml</string>
    <string name="cancel">Cancel</string>
    <string name="copy">Copy</string>
    <string name="copyUrl">Copy URL</string>
    <string name="cut">Cut</string>
    <string name="defaultVoiceMailAlphaTag">Voicemail</string>
    <string name="defaultMsisdnAlphaTag">MSISDN1</string>
    <string name="emptyPhoneNumber">(No phone number)</string>
    <string name="httpErrorBadUrl">"Couldn't open the page because the URL is invalid."</string>
    <string name="httpErrorUnsupportedScheme">"The protocol isn't supported."</string>
    <string name="no">Cancel</string>
    <string name="ok">OK</string>
    <string name="paste">Paste</string>
    <string name="search_go">Search</string>
    <string name="selectAll">Select all</string>
    <string name="unknownName">Unknown</string>
    <string name="untitled">&lt;Untitled></string>
    <string name="VideoView_error_button">OK</string>
    <string name="VideoView_error_text_unknown">"Can't play this video."</string>
    <string name="VideoView_error_title">Video problem</string>
    <string name="yes">OK</string>
    <string name="dialog_alert_title">Attention</string>
    <string name="VideoView_error_text_invalid_progressive_playback">"This video isn't valid for streaming to this device."</string>
    <string name="selectTextMode">Select text</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="profileNameDefault">Default</string>
    <string name="profileNameWork">Work</string>
    <string name="profileNameHome">Home</string>
    <string name="profileNameSilent">Silent</string>
    <string name="profileNameNight">Night</string>
    <string name="profileNameAutomobile">Automobile</string>
    <string name="profileGroupPhone">Phone</string>
    <string name="profileGroupCalendar">Calendar</string>
    <string name="profileGroupGmail">Gmail</string>
    <string name="profileGroupEmail">Email</string>
    <string name="profileGroupSMS">SMS</string>
    <string name="wildcardProfile">Other</string>
    <string name="profile_none">None</string>
    <string name="profile_picker_title">Profiles</string>
    <string name="global_action_choose_profile">Profile</string>
    <string name="global_action_screenshot">Screenshot</string>
    <string name="permlab_receiveProtectedSms">receive protected SMS</string>
    <string name="permdesc_receiveProtectedSms">Allows the app to receive an incoming protected SMS.</string>
    <string name="permlab_modifyProtectedSmsList">modify protected SMS list</string>
    <string name="permdesc_modifyProtectedSmsList">Allows the app to modify the protected SMS address list.</string>
    <string name="permgrouplab_security">Security</string>
    <string name="permgroupdesc_security">Permissions related to device security information.</string>
    <string name="permlab_accessThemeService">access theme service</string>
    <string name="permdesc_accessThemeService">Allows an app to access the theme service. Should never be needed for normal apps.</string>
    <string name="permlab_readThemes">read your theme info</string>
    <string name="permdesc_readThemesDesc">Allows the app to read your themes and determine which theme you have applied.</string>
    <string name="permlab_writeThemes">modify your themes</string>
    <string name="permdesc_writeThemesDesc">Allows the app to insert new themes and modify which theme you have applied.</string>
    <string name="permlab_readPhoneBlacklist">read phone blacklist</string>
    <string name="permdesc_readPhoneBlacklist">Allows an app to read information about phone numbers that are blocked for incoming calls or messages.</string>
    <string name="permlab_changePhoneBlacklist">change phone blacklist</string>
    <string name="permdesc_changePhoneBlacklist">Allows an app to change the phone numbers that are blocked for incoming calls or messages.</string>
    <string name="permlab_changePrivacyGuardState">enable or disable Privacy Guard</string>
    <string name="permdesc_changePrivacyGuardState">Allows the app to change whether another app runs with Privacy Guard. When an app is running with Privacy Guard, it will not have access to personal data such as contacts, call logs, or messages.</string>
    <string name="privacy_guard_notification">Privacy Guard active</string>
    <string name="privacy_guard_notification_detail">%1$s will not be able to access personal data</string>
    <string name="permlab_useHardwareFramework">use hardware framework</string>
    <string name="permdesc_useHardwareFramework">Allows an app access to the CM hardware framework.</string>
    <string name="permlab_setKeyguardWallpaper">set keyguard wallpaper</string>
    <string name="permdesc_setKeyguardWallpaper">Allows an app to change the lock screen wallpaper.</string>
    <string name="privacy_guard_dialog_title">Privacy Guard</string>
    <string name="privacy_guard_dialog_summary">%1$s would like to %2$s.</string>
    <string name="global_action_reboot">Reboot</string>
    <string name="global_action_current_user">Current</string>
    <string name="reboot_reboot">Reboot</string>
    <string name="reboot_recovery">Recovery</string>
    <string name="reboot_bootloader">Bootloader</string>
    <string name="reboot_download">Download</string>
    <string name="reboot_soft">Soft reboot</string>
    <string name="reboot_title">Reboot</string>
    <string name="reboot_confirm">Your phone will reboot.</string>
    <string name="reboot_progress">Rebooting…</string>
    <string name="app_killed_message">App killed</string>
    <string name="adb_net_active_notification_title">ADB over network enabled</string>
    <string name="adb_both_active_notification_title">ADB over USB &amp; network enabled</string>
    <string name="adb_active_generic_notification_message">Touch to disable debugging.</string>
    <string name="usb_choose_notification_title">Touch to choose USB options.</string>
    <string name="permlab_interceptPackageLaunch">intercept app launch</string>
    <string name="permdesc_interceptPackageLaunch">Allows an app to intercept launch of other apps</string>
    <string name="app_ops_access_camera">access the camera</string>
    <string name="app_ops_access_location">access your location</string>
    <string name="app_ops_access_notifications">read your notifications</string>
    <string name="app_ops_activate_vpn">activate a VPN</string>
    <string name="app_ops_alarm_wakeup">wake up the device</string>
    <string name="app_ops_su">get root access</string>
    <string name="app_ops_auto_start">start at power up</string>
    <string name="app_ops_delete_call_log">delete your call log</string>
    <string name="app_ops_delete_contacts">delete your contacts</string>
    <string name="app_ops_delete_mms">delete your MMS messages</string>
    <string name="app_ops_delete_sms">delete your SMS messages</string>
    <string name="app_ops_draw_on_top">draw windows on top</string>
    <string name="app_ops_get_usage_stats">get app usage stats</string>
    <string name="app_ops_keep_device_awake">keep your device awake</string>
    <string name="app_ops_make_phone_call">make a phone call</string>
    <string name="app_ops_modify_calendar">update your calendar</string>
    <string name="app_ops_modify_call_log">update the call log</string>
    <string name="app_ops_modify_clipboard">modify the clipboard</string>
    <string name="app_ops_modify_contacts">update your contacts</string>
    <string name="app_ops_modify_settings">update system settings</string>
    <string name="app_ops_mute_unmute_microphone">mute/unmute the microphone</string>
    <string name="app_ops_play_audio">play audio</string>
    <string name="app_ops_post_notification">post a notification</string>
    <string name="app_ops_project_media">project media</string>
    <string name="app_ops_read_calendar">read your calendar</string>
    <string name="app_ops_read_call_log">read the call log</string>
    <string name="app_ops_read_clipboard">read the clipboard</string>
    <string name="app_ops_read_contacts">read your contacts</string>
    <string name="app_ops_read_mms">read your MMS messages</string>
    <string name="app_ops_read_sms">read your SMS messages</string>
    <string name="app_ops_receive_sms">receive an SMS message</string>
    <string name="app_ops_record_audio">record audio</string>
    <string name="app_ops_send_mms">send an MMS message</string>
    <string name="app_ops_send_sms">send an SMS message</string>
    <string name="app_ops_start_at_bootup">start at power up</string>
    <string name="app_ops_toast_window">display toast messages</string>
    <string name="app_ops_toggle_bluetooth">toggle Bluetooth</string>
    <string name="app_ops_toggle_mobile_data">toggle mobile data</string>
    <string name="app_ops_toggle_nfc">toggle NFC</string>
    <string name="app_ops_toggle_wifi">toggle WiFi</string>
    <string name="app_ops_use_alarm_volume">control alarm volume</string>
    <string name="app_ops_use_audio_focus">control the audio focus</string>
    <string name="app_ops_use_bluetooth_volume">control the Bluetooth volume</string>
    <string name="app_ops_use_master_volume">control the master volume</string>
    <string name="app_ops_use_media_buttons">use the media buttons</string>
    <string name="app_ops_use_media_volume">control the media volume</string>
    <string name="app_ops_use_notification_volume">control the notification volume</string>
    <string name="app_ops_use_ring_volume">control the ringtone volume</string>
    <string name="app_ops_use_vibrate">use haptic feedback</string>
    <string name="app_ops_use_voice_volume">control the voice call volume</string>
    <string name="app_ops_write_mms">write an MMS message</string>
    <string name="app_ops_write_sms">write an SMS message</string>
    <string name="lockscreen_sim_error_message_short">Invalid Card.</string>
    <string name="lockscreen_airplane_mode_on">Airplane Mode</string>
    <string name="usb_charging_notification_title">Connected in charging mode</string>
    <string name="tethered_notification_no_device_message">No connected device</string>
    <string name="tethered_notification_one_device_message">%1$s connected device</string>
    <string name="tethered_notification_multi_device_message">%1$s connected devices</string>
    <string name="progress_nomediapresent">No removable media present…</string>
    <string name="storage_uicc">UICC storage</string>
    <string name="China_Mobile">China Mobile</string>
    <string name="China_Unicom">China Unicom</string>
    <string name="China_Telecom">China Telecom</string>
    <string name="permission_remember_choice">Remember my choice</string>
    <string name="def_wifi_wifihotspot_ssid" />
    <string name="def_wifi_wifihotspot_pass" />
    <string name="def_wifi_direct_name" />
    <string name="perf_profile_pwrsv">Power save</string>
    <string name="perf_profile_bal">Balanced</string>
    <string name="perf_profile_perf">Performance</string>
    <string name="theme_install_error_title">Failed to install theme</string>
    <string name="theme_install_error_message">%s failed to install</string>
    <string name="theme_reset_notification_title">Theme reset</string>
    <string name="theme_reset_notification_body">System theme restored due to multiple app crashes.</string>
    <string name="stylus_app_not_installed">%s is not installed</string>
    <string name="permlab_interceptSmsSent">intercept outgoing SMS</string>
    <string name="noApplications">No apps can perform this action.</string>
    <string name="select_input_method">Change keyboard</string>
    <string name="show_ime">Show input method</string>
    <string name="hardware">Hardware</string>
    <string name="activity_resolver_use_always">Always</string>
    <string name="activity_resolver_use_once">Just once</string>
</resources>