<?xml version="1.0" encoding="utf-8"?>
<com.android.internal.widget.ResolverDrawerLayout android:id="@id/contentPanel" android:layout_width="fill_parent" android:layout_height="fill_parent" android:maxWidth="@dimen/resolver_max_width" android:maxCollapsedHeight="192.0dip" android:maxCollapsedHeightSmall="56.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:background="@color/resolver_list_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:elevation="8.0dip" android:layout_alwaysShow="true">
        <TextView android:textAppearance="?textAppearanceMedium" android:gravity="start|center" android:id="@id/title" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:minHeight="56.0dip" android:layout_weight="1.0" android:paddingStart="?dialogPreferredPadding" android:paddingEnd="?dialogPreferredPadding" />
        <LinearLayout android:id="@id/profile_button" android:paddingTop="4.0dip" android:paddingBottom="4.0dip" android:focusable="true" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="48.0dip" android:layout_marginTop="4.0dip" android:paddingStart="8.0dip" android:paddingEnd="8.0dip" android:layout_marginEnd="4.0dip" style="?attr/borderlessButtonStyle">
            <ImageView android:layout_gravity="start|center" android:id="@id/icon" android:layout_width="24.0dip" android:layout_height="24.0dip" android:layout_marginTop="12.0dip" android:layout_marginBottom="12.0dip" android:scaleType="fitCenter" android:layout_marginStart="4.0dip" android:layout_marginEnd="16.0dip" />
            <TextView android:textAppearance="?textAppearanceButton" android:textColor="?textColorPrimary" android:ellipsize="marquee" android:layout_gravity="start|center" android:id="@id/text1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxLines="1" android:minLines="1" android:layout_marginEnd="16.0dip" />
        </LinearLayout>
    </LinearLayout>
    <ListView android:scrollbarStyle="outsideOverlay" android:id="@id/resolver_list" android:background="@color/resolver_list_bg" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:divider="@null" android:nestedScrollingEnabled="true" android:elevation="8.0dip" />
    <TextView android:gravity="center" android:id="@id/empty" android:padding="32.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/noApplications" android:layout_alwaysShow="true" />
    <LinearLayout android:gravity="end|center" android:orientation="horizontal" android:id="@id/button_bar" android:background="@color/resolver_list_bg" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:measureWithLargestChild="true" android:layoutDirection="locale" android:paddingStart="12.0dip" android:paddingEnd="12.0dip" android:elevation="8.0dip" android:layout_alwaysShow="true" android:layout_ignoreOffset="true" style="?android:attr/buttonBarStyle">
        <Button android:enabled="false" android:layout_gravity="start" android:id="@id/button_once" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minHeight="@dimen/alert_dialog_button_bar_height" android:text="@string/activity_resolver_use_once" android:maxLines="2" android:onClick="onButtonClick" style="?android:attr/buttonBarNegativeButtonStyle" />
        <Button android:enabled="false" android:layout_gravity="end" android:id="@id/button_always" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minHeight="@dimen/alert_dialog_button_bar_height" android:text="@string/activity_resolver_use_always" android:maxLines="2" android:onClick="onButtonClick" style="?android:attr/buttonBarPositiveButtonStyle" />
    </LinearLayout>
</com.android.internal.widget.ResolverDrawerLayout>